--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,12 +20,22 @@ jobs:
     - name: Install CDK8s CLI
       run: npm install -g cdk8s-cli
 
+    - name: Ensure dist/ directory exists
+      run: mkdir -p dist
+
     - name: Run `cdk8s synth`
-      working-directory: .
       run: cdk8s synth
 
-    - name: Upload generated manifests
+    - name: Upload generated manifests as artifact
       uses: actions/upload-artifact@v4
       with:
         name: cdk8s-manifests
         path: dist/
+
+    - name: Commit and push synthesized manifests
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git add dist/
+        git diff --cached --quiet dist/ || git commit -m "chore: update synthesized Kubernetes manifests"
+        git push
