--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,4 +38,4 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add dist/
         git diff --cached --quiet dist/ || git commit -m "chore: update synthesized Kubernetes manifests"
-        git push
+        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
