--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,14 +2,10 @@ name: CDK8s Synth
 
 permissions:
   contents: write
-
+  
 on:
   push:
-    branches:
-      - '**'
   pull_request:
-    branches:
-      - '**'
 
 jobs:
   synth:
@@ -24,16 +20,8 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Install CDK8s CLI and dependencies
-      run: |
-        npm install -g cdk8s-cli
-        npm ci || npm install
-
-    - name: Compile TypeScript
-      run: |
-        if [ -f tsconfig.json ]; then
-          npx tsc
-        fi
+    - name: Install CDK8s CLI
+      run: npm install -g cdk8s-cli
 
     - name: Ensure dist/ directory exists
       run: mkdir -p dist
@@ -54,5 +42,3 @@ jobs:
         git add dist/
         git diff --cached --quiet dist/ || git commit -m "chore: update synthesized Kubernetes manifests"
         git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
